--- a/front/src/Home.css
+++ b/front/src/Home.css
@@ -1323,6 +1323,16 @@ a:hover {
   color: #000000;
 }
 
+.card-box-iconno {
+  padding: 1rem 3rem 1rem 2.5rem;
+  border: 5px solid #4C9BB7;
+}
+
+.card-box-iconno span {
+  font-size: 4rem;
+  color: #000000;
+}
+
 .col-md-4{
   margin-top: 40px;
 }
@@ -1331,6 +1341,13 @@ a:hover {
   font-size: 2.5rem;
   font-weight: 600;
   margin-left: -40px;
+}
+
+.title-d {
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin-left: -40px;
+  color: #5B6A6F;
 }
 
 /*======================================
