--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,5 @@
-body{
-
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 .App {
   text-align: center;
@@ -23,7 +22,7 @@ body{
   list-style: none;
 }
 
-
 .btn-register {
-    background-color: #2eca6a;
+  opacity: 100;
+  background-color: #329232;
 }
