--- a/front/src/card.css
+++ b/front/src/card.css
@@ -5,6 +5,7 @@
   border-radius: 50px;
   text-transform: uppercase;
   letter-spacing: 0.03em;
+  background-color: white;
 }
 #headerCard {
   color: #ffffff;
