--- a/front/src/Home.css
+++ b/front/src/Home.css
@@ -287,6 +287,15 @@ a:hover {
   font-size: 2rem;
 }
 
+.title-v {
+  font-size: 20px;
+}
+
+.col-md-8{
+  text-align: left;
+  text-indent: 0px;
+}
+
 .title-box-d .title-d:after {
   content: '';
   position: absolute;
@@ -612,6 +621,7 @@ a:hover {
 }
 
 .card-body-c {
+  font-family: 'PT Serif', serif;
   padding: .5rem .5rem 0 .5rem;
 }
 
